--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "files": [
     "bin",
-    ".next/standalone",
-    ".next/static",
-    "public"
+    "dist"
   ],
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
+    "dev": "concurrently \"bun run dev:client\" \"bun run dev:server\"",
+    "dev:client": "vite",
+    "dev:server": "bun --watch src/server/index.ts",
+    "build": "bun run build:client && bun run build:server",
+    "build:client": "vite build",
+    "build:server": "bun build src/server/index.ts --outdir dist/server --target bun",
     "start": "bun run src/cli.ts",
     "release:patch": "bun run build && npm version patch && npm publish --access public",
     "release:minor": "bun run build && npm version minor && npm publish --access public",
@@ -27,7 +29,8 @@
     "issue-tracker",
     "task-management",
     "sqlite",
-    "nextjs",
+    "vite",
+    "hono",
     "bun"
   ],
   "author": "Omercan Balandi <balandiomer@gmail.com>",
@@ -62,9 +65,8 @@
     "commander": "^13.1.0",
     "dayjs": "^1.11.19",
     "drizzle-orm": "^0.38.4",
+    "hono": "^4.7.0",
     "lucide-react": "^0.562.0",
-    "next": "^16.1.4",
-    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
@@ -79,8 +81,11 @@
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.4.0",
+    "concurrently": "^9.1.0",
     "postcss": "^8.5.6",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.0"
   }
 }
